[gd_scene load_steps=4 format=3 uid="uid://bcy54dv2wr8xn"]

[ext_resource type="Script" uid="uid://csdiqsni5h532" path="res://scripts/ui/capture_area.gd" id="1_813a5"]
[ext_resource type="Texture2D" uid="uid://c27ju22ya1jjg" path="res://assets/capture-background.png" id="1_khg73"]
[ext_resource type="Script" uid="uid://knur3vocymce" path="res://scripts/ui/line.gd" id="3_hnxaw"]

[node name="CaptureArea" type="Node2D"]
script = ExtResource("1_813a5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_khg73")

[node name="BrightsLine" type="Marker2D" parent="."]
position = Vector2(-300, -165)
gizmo_extents = 45.0
script = ExtResource("3_hnxaw")

[node name="RibbonsLine" type="Marker2D" parent="."]
position = Vector2(-300, -55)
gizmo_extents = 45.0
script = ExtResource("3_hnxaw")

[node name="AnimalsLine" type="Marker2D" parent="."]
position = Vector2(-300, 55)
gizmo_extents = 45.0
script = ExtResource("3_hnxaw")

[node name="PlainsLine" type="Marker2D" parent="."]
position = Vector2(-300, 165)
gizmo_extents = 45.0
script = ExtResource("3_hnxaw")
